Add workarounds